...
) {
    val textFieldContentDescription =
        stringResource(R.string.dialog_text_not_blank_text_field_content_description, label)
    val isError = text.isBlank()

    Column {
        TextField(
            value = text,
            onValueChange = onTextChange,
            label = { Text(label) },
            modifier = Modifier.semantics {
                contentDescription = textFieldContentDescription
                testTag = "TextField"
            },
            isError = isError
        )
        if(isError) {
            Text(
                text = stringResource(R.string.dialog_text_not_blank_error),
                modifier = Modifier.padding(start = 16.dp).semantics { testTag = "ErrorText" },
                color = MaterialTheme.colors.error,
                style = MaterialTheme.typography.caption
            )
        }
    }
}
