...
        Spacer(modifier = Modifier.width(16.dp))

        Button(
            onClick = onAccept,
            modifier = Modifier.semantics {
                contentDescription = acceptContentDescription
                testTag = "AcceptButton"
            },
            enabled = acceptEnabled
        ) {
            Text(text = acceptLabel)
        }
    }
...
